# municipal-agent

./: .gitignore  README.md  alembic.ini  plan.md  project.md  pyproject.toml  tracker.md
configs/: domains.yaml  ontology.yaml
configs/cities/: varanasi.yaml
muni/: __init__.py  cli.py  config.py
muni/agents/: __init__.py  anomaly.py  base.py  classification.py  context.py  discovery.py  extraction.py  fiscal_analysis.py  governance.py  narrative.py  ontology.py  orchestrator.py  result.py  spatial.py  visualization.py
muni/cities/: __init__.py  schemas.py  service.py
muni/db/: __init__.py  models.py  session.py
muni/db/migrations/: env.py
muni/db/migrations/versions/: 4e03d87df0e4_add_document_model.py
muni/documents/: service.py
muni/sources/: __init__.py  whitelist.py
tests/: test_agents.py  test_cli.py
